[gd_scene load_steps=6 format=2]

[ext_resource path="res://Figures/image17 (copy 1).png" type="Texture" id=1]
[ext_resource path="res://Addons/game_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Addons/new_theme.tres" type="Theme" id=3]
[ext_resource path="res://Scripts/KnowVaccines.gd" type="Script" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="image17" type="Sprite" parent="."]
scale = Vector2( 0.1875, 0.1875 )
texture = ExtResource( 1 )
centered = false

[node name="Buttons Container" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 31.0
margin_right = -122.0
margin_bottom = -5.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Buttons Container"]
margin_right = 106.0
margin_bottom = 392.0

[node name="BCG" type="Button" parent="Buttons Container/VBoxContainer"]
margin_right = 106.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
text = "BCG"
flat = true
align = 0

[node name="Hepatite B" type="Button" parent="Buttons Container/VBoxContainer"]
margin_top = 22.0
margin_right = 106.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
text = "Hepatite B"
flat = true
align = 0

[node name="Penta" type="Button" parent="Buttons Container/VBoxContainer"]
margin_top = 44.0
margin_right = 106.0
margin_bottom = 62.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
text = "Penta"
flat = true
align = 0

[node name="Poliomielite" type="Button" parent="Buttons Container/VBoxContainer"]
margin_top = 66.0
margin_right = 106.0
margin_bottom = 84.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
text = "Poliomielite"
flat = true
align = 0

[node name="Pneumocócica 10 Valente" type="Button" parent="Buttons Container/VBoxContainer"]
margin_top = 88.0
margin_right = 106.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
text = "Pneumocócica 10 Valente"
flat = true
align = 0

[node name="Rotavírus humano" type="Button" parent="Buttons Container/VBoxContainer"]
margin_top = 110.0
margin_right = 106.0
margin_bottom = 128.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
text = "Rotavírus humano"
flat = true
align = 0

[node name="DTP" type="Button" parent="Buttons Container/VBoxContainer"]
margin_top = 132.0
margin_right = 106.0
margin_bottom = 150.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
text = "DTP"
flat = true
align = 0

[node name="Hepatite A" type="Button" parent="Buttons Container/VBoxContainer"]
margin_top = 154.0
margin_right = 106.0
margin_bottom = 172.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
text = "Hepatite A"
flat = true
align = 0

[node name="Tetra viral" type="Button" parent="Buttons Container/VBoxContainer"]
margin_top = 176.0
margin_right = 106.0
margin_bottom = 194.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
text = "Tetra viral"
flat = true
align = 0

[node name="Varicela atenuada" type="Button" parent="Buttons Container/VBoxContainer"]
margin_top = 198.0
margin_right = 106.0
margin_bottom = 216.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
text = "Varicela atenuada"
flat = true
align = 0

[node name="HPV" type="Button" parent="Buttons Container/VBoxContainer"]
margin_top = 220.0
margin_right = 106.0
margin_bottom = 238.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
text = "HPV"
flat = true
align = 0

[node name="Meningocócica C" type="Button" parent="Buttons Container/VBoxContainer"]
margin_top = 242.0
margin_right = 106.0
margin_bottom = 260.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
text = "Meningocócica C"
flat = true
align = 0

[node name="Febre Amarela" type="Button" parent="Buttons Container/VBoxContainer"]
margin_top = 264.0
margin_right = 106.0
margin_bottom = 282.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
text = "Febre Amarela"
flat = true
align = 0

[node name="Tríplice viral" type="Button" parent="Buttons Container/VBoxContainer"]
margin_top = 286.0
margin_right = 106.0
margin_bottom = 304.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
text = "Tríplice viral"
flat = true
align = 0

[node name="Pneumocócica 23 Valente" type="Button" parent="Buttons Container/VBoxContainer"]
margin_top = 308.0
margin_right = 106.0
margin_bottom = 326.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
text = "Pneumocócica 23 Valente"
flat = true
align = 0

[node name="Dupla adulto (dT)" type="Button" parent="Buttons Container/VBoxContainer"]
margin_top = 330.0
margin_right = 106.0
margin_bottom = 348.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
text = "Dupla adulto (dT)"
flat = true
align = 0

[node name="dTpa" type="Button" parent="Buttons Container/VBoxContainer"]
margin_top = 352.0
margin_right = 106.0
margin_bottom = 370.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
text = "dTpa"
flat = true
align = 0

[node name="Influenza" type="Button" parent="Buttons Container/VBoxContainer"]
margin_top = 374.0
margin_right = 106.0
margin_bottom = 392.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
text = "Influenza"
flat = true
align = 0

[node name="Text Container" type="ScrollContainer" parent="."]
anchor_left = 0.517
anchor_top = 0.156
anchor_right = 0.971
anchor_bottom = 0.956
margin_left = -0.0800018
margin_top = -0.0600014
margin_right = -0.0400238
margin_bottom = -0.0599976
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Text Container"]
margin_right = 109.0
margin_bottom = 83.0
size_flags_horizontal = 3

[node name="empty" type="Label" parent="Text Container/VBoxContainer"]
margin_right = 109.0
margin_bottom = 1.0
custom_fonts/font = ExtResource( 2 )
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="Name" type="Label" parent="Text Container/VBoxContainer"]
margin_top = 5.0
margin_right = 109.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 2 )
text = "BCG (Bacilo Calmette-Guerin)"
align = 1
valign = 1
autowrap = true
percent_visible = -0.0384615

[node name="empty2" type="Label" parent="Text Container/VBoxContainer"]
margin_top = 21.0
margin_right = 109.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 2 )
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="Finalidade" type="Label" parent="Text Container/VBoxContainer"]
margin_top = 26.0
margin_right = 109.0
margin_bottom = 83.0
custom_fonts/font = ExtResource( 2 )
text = "Previne contra as formas graves de tuberculose. 
A aplicacao ocorre em dose unica."
align = 1
valign = 1
autowrap = true
percent_visible = -0.0144928

[connection signal="pressed" from="Buttons Container/VBoxContainer/BCG" to="." method="_on_BCG_pressed"]
[connection signal="pressed" from="Buttons Container/VBoxContainer/Hepatite B" to="." method="_on_Hepatite_B_pressed"]
[connection signal="pressed" from="Buttons Container/VBoxContainer/Penta" to="." method="_on_Penta_pressed"]
[connection signal="pressed" from="Buttons Container/VBoxContainer/Poliomielite" to="." method="_on_Poliomielite_pressed"]
[connection signal="pressed" from="Buttons Container/VBoxContainer/Pneumocócica 10 Valente" to="." method="_on_Pneumoccica_10_Valente_pressed"]
[connection signal="pressed" from="Buttons Container/VBoxContainer/Rotavírus humano" to="." method="_on_Rotavrus_humano_pressed"]
[connection signal="pressed" from="Buttons Container/VBoxContainer/DTP" to="." method="_on_DTP_pressed"]
[connection signal="pressed" from="Buttons Container/VBoxContainer/Hepatite A" to="." method="_on_Hepatite_A_pressed"]
[connection signal="pressed" from="Buttons Container/VBoxContainer/Tetra viral" to="." method="_on_Tetra_viral_pressed"]
[connection signal="pressed" from="Buttons Container/VBoxContainer/Varicela atenuada" to="." method="_on_Varicela_atenuada_pressed"]
[connection signal="pressed" from="Buttons Container/VBoxContainer/HPV" to="." method="_on_HPV_pressed"]
[connection signal="pressed" from="Buttons Container/VBoxContainer/Meningocócica C" to="." method="_on_Meningoccica_C_pressed"]
[connection signal="pressed" from="Buttons Container/VBoxContainer/Febre Amarela" to="." method="_on_Febre_Amarela_pressed"]
[connection signal="pressed" from="Buttons Container/VBoxContainer/Tríplice viral" to="." method="_on_Trplice_viral_pressed"]
[connection signal="pressed" from="Buttons Container/VBoxContainer/Pneumocócica 23 Valente" to="." method="_on_Pneumoccica_23_Valente_pressed"]
[connection signal="pressed" from="Buttons Container/VBoxContainer/Dupla adulto (dT)" to="." method="_on_Dupla_adulto_dT_pressed"]
[connection signal="pressed" from="Buttons Container/VBoxContainer/dTpa" to="." method="_on_dTpa_pressed"]
[connection signal="pressed" from="Buttons Container/VBoxContainer/Influenza" to="." method="_on_Influenza_pressed"]
